<package>
  <name>cgal_catkin</name>
  <version>5.0.3</version>
  <description>Catkin wrapper for CGAL.</description>
  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
